# RapidImgUtil

./: CMakeLists.txt  README.md
include/: precomp.h  rpimagesize.h  rpimgex-tga.h  rpimgutil.h
sources/: rpimagesize.cpp  rpimgutil.cpp  test.cpp
